<resources>
    <string name="app_name">WedeChurch</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="msg_loading">Please wait&#8230;</string>
    <string name="action_settings">Settings</string>

    <string name="app_intro">Welcome to wedechurch</string>

    <string name="action_login">Log in</string>
    <string name="action_skip">Skip Login</string>
    <string name="action_signup">Sign up</string>
    <string name="action_logout">Logout</string>
    <string name="settings_file">account</string>
    <string name="action_remove">Delete</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    <string name="settings_account_id">account_id</string>
    <string name="settings_account_username">account_username</string>
    <string name="settings_account_access_token">access_token</string>

    <string name="action_login_with_facebook">Log in with Facebook</string>
    <string name="action_signup_with_facebook">Sign up with Facebook</string>
    <string name="action_connect_with_facebook">Connect with Facebook</string>
    <string name="action_remove_connection">Remove connection</string>
    <string name="action_regular_signup">Back to the regular registration form</string>
    <string name="action_forgot_password">Forgot password?</string>


    <string name="signup_label_1">By clicking Sign up, you agree to our</string>
    <string name="signup_label_terms_and_policies">Terms and Policies</string>

    <string name="action_save">Save</string>
    <string name="error_signin">Incorrect username or password</string>
    <string name="error_internet_connection">No internet connection</string>
    <string name="error_data_loading">When loading data error has occurred. Check your network connection.</string>
    <string name="error_field_empty">Required fields are empty</string>
    <string name="error_wrong_format">Wrong format</string>
    <string name="error_small_password">Minimum 6 characters</string>
    <string name="error_small_username">Minimum 5 characters</string>
    <string name="error_small_fullname">Minimum 2 characters</string>
    <string name="error_login_taken">Username is already taken</string>
    <string name="error_email_taken">User with this mail is already registered</string>
    <string name="error_password">Invalid password.</string>
    <string name="error_email">Email invalid.</string>
    <string name="action_continue">Continue</string>


    <string name="msg_loading_2">Loading. Please wait&#8230;</string>
    <string name="msg_network_error">Please check your Internet connection</string>
    <string name="msg_account_blocked">This account is blocked by a moderator.</string>
    <string name="msg_copied_to_clipboard">Copied to clipboard.</string>
    <string name="msg_enter_item">Please write something or attach photo.</string>
    <string name="msg_enter_msg">Please write something or attach photo.</string>
    <string name="msg_password_changed">Password successfully changed</string>
    <string name="msg_settings_saved">Settings successfully saved.</string>
    <string name="msg_ticket_send_success">Your request is accepted! You will receive a response to the email, which is indicated in the request.</string>
    <string name="msg_password_reset_link_sent">A message with link to reset your password has been sent to your email.</string>
    <string name="msg_no_such_user_in_bd">No such user in database</string>
    <string name="msg_connect_to_facebook_success">You have successfully linked application with your account on Facebook!</string>
    <string name="msg_connect_to_facebook_error">Your account on Facebook is already associated with another account.</string>
    <string name="msg_connect_to_facebook_removed">Connect with your Facebook account removed.</string>
    <string name="msg_comment_has_been_added">Comment has been added.</string>
    <string name="msg_comments_disabled">Comments are closed for this item.</string>
    <string name="msg_auth_prompt_like">To get started, sign in to your account or register.</string>
    <string name="msg_auth_prompt_comment">Make comments can only registered users.</string>


    <!-- Facebook App Id -->

    <string name="facebook_app_id">1426170657434064</string>


    <string name="title_activity_login">Log In</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_main">My News</string>
    <string name="title_activity_feeds">My News</string>
    <string name="title_activity_recovery">Password recovery</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_web_view">Web View</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_services">Services</string>
    <string name="title_activity_view_item">Item</string>
    <string name="title_activity_profile">Profile</string>


    <string name="label_authorization_via_facebook">Authorization via Facebook.</string>
    <string name="label_account_connected_to_facebook">Connected with Facebook</string>
    <string name="label_account_connect_to_facebook">Connect this account with your social network accounts</string>
    <string name="label_empty_list">List is empty.</string>


    <string name="placeholder_password">Password</string>
    <string name="placeholder_login">Username</string>
    <string name="placeholder_fullname">Fullname</string>
    <string name="placeholder_location">Location</string>
    <string name="placeholder_facebook_page">Facebook page</string>
    <string name="placeholder_instagram_page">Instagram page</string>
    <string name="placeholder_bio">Bio</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_subject">Subject</string>
    <string name="placeholder_support_detail">What are you contacting us about?</string>
    <string name="placeholder_current_password">Current password</string>
    <string name="placeholder_new_password">New password</string>
    <string name="placeholder_item_category">Category</string>
    <string name="placeholder_item_title">Title</string>
    <string name="placeholder_item_login">Username, email or phone</string>
    <string name="placeholder_item_passw">Password</string>
    <string name="placeholder_item_url">Web site</string>
    <string name="placeholder_item_description">Description</string>
    <string name="placeholder_search">Search</string>
    <string name="placeholder_comment">Type a comment&#8230;</string>
    <string name="placeholder_message">Type a message&#8230;</string>

    <string name="pls_wait">Please Wait</string>
    <string name="gps_not_ready">GPS is not ready to take your latitude and longitude. Please wait for a while to search.</string>
    <string name="sorry_title">Sorry</string>
    <string name="no_google_play">Your device not available Google Play Service. Please install it.</string>
    <string name="map_icon_desc">Image Description</string>
    <string name="OK">OK</string>


    <string-array name="navDrawerItems">
        <item>Map</item>
        <item>Churches</item>
        <item>Events</item>
        <item>Favorites</item>
        <item>Profile</item>
        <item>Settings</item>
    </string-array>

    <string-array name="navDrawerIcons">
        <item>@drawable/ic_map</item>
        <item>@drawable/ic_action_categories</item>
        <item>@drawable/ic_events</item>
        <item>@drawable/ic_action_favorites</item>
        <item>@drawable/ic_action_profile</item>
        <item>@drawable/ic_action_settings</item>
    </string-array>

    <string name="page_1">Map</string>
    <string name="page_2">Church</string>
    <string name="page_3">Events</string>
    <string name="page_4">Favorites</string>
    <string name="page_5">Profile</string>
    <string name="page_6">Settings</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <string name="action_reply">Reply</string>
    <string name="label_delete">Delete</string>
    <string name="label_delete_comment">Are you sure you want to delete this comment?</string>


    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>

    <string name="label_profile_report_0">Spam</string>
    <string name="label_profile_report_1">Hate speech or violence</string>
    <string name="label_profile_report_2">Nudity or Pornography</string>
    <string name="label_profile_report_3">Fake profile</string>
    <string name="label_profile_report_4">Piracy</string>


    <string name="action_camera">Camera</string>
    <string name="action_gallery">Choose from gallery</string>

    <string name="dialog_popular_0">All Time</string>
    <string name="dialog_popular_1">Day</string>
    <string name="dialog_popular_2">Week</string>
    <string name="dialog_popular_3">Month</string>

    <string name="title_dialog_popular">Popular Settings</string>
    <string name="label_post_report_title">Abuse report</string>
    <string name="google_maps_key">AIzaSyDDdxleX65jwlQzojVBtbNIoBazp4FGDV8</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_account">Do not have an account? Register here</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_signup_name">First Name</string>
    <string name="last_signup_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="sex">Sex</string>
    <string name="signup_country">Country</string>
    <string name="signup_email">Email</string>
    <string name="signup_mobile_number">Mobile Number</string>
    <string name="signup_password">Password</string>
    <string name="signup_re_enter_password">Re-enter Password</string>
    <string name="signupcreate_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>

    <string-array name="church_name">
        <item>Mekaneyesus</item>
        <item>Kalehiwot</item>
        <item>Beza</item>
        <item>Yougo</item>
    </string-array>
    <string-array name="church_denomination_image">
        <item>Mekaneyesus</item>
        <item>Kalehiwot</item>
        <item>Beza</item>
        <item>Yougo</item>
    </string-array>
    <string-array name="number_of_churchs">
        <item>100</item>
        <item>50</item>
        <item>2</item>
        <item>1</item>
    </string-array>

    <string name="cd_main_image">main image</string>



    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Wede Church!</string>
    <string name="slide_1_desc">Join wedechurch ! go to a local church near by!</string>

    <string name="slide_2_title">Wede Church!</string>
    <string name="slide_2_desc">Get List of Events in the city!</string>

    <string name="slide_3_title">Notifications</string>
    <string name="slide_3_desc">Get Notifications from your home church!</string>

    <string name="slide_4_title">Favorite list</string>
    <string name="slide_4_desc">Add church to your favorite list to get notifications!</string>




</resources>
