<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/wedechurch_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:backgroundTint="@color/white"
                android:hint="@string/first_signup_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:backgroundTint="@color/white"
                android:hint="@string/last_signup_name" />
        </android.support.design.widget.TextInputLayout>
       <LinearLayout android:layout_height="wrap_content"
           android:layout_width="match_parent"
           android:orientation="horizontal">

           <RelativeLayout android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:orientation="horizontal">
               <TextView android:id="@+id/Sex"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColorHint="@color/white"
                   android:layout_centerVertical="true"
                   android:textColor="@color/white"
                   android:paddingRight="50dp"
                   android:hint="@string/sex" />
               <android.support.v7.widget.CardView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:cardElevation="5dp"
                   app:cardUseCompatPadding="true"
                   android:layout_toRightOf="@+id/Sex"
                   >
                   <Spinner
                       android:id="@+id/spinner"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:gravity="center" />
               </android.support.v7.widget.CardView>


           </RelativeLayout>



       </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:backgroundTint="@color/white"
                android:hint="@string/user_name" />
        </android.support.design.widget.TextInputLayout>
        <!-- Address Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_country"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:backgroundTint="@color/white"
                android:hint="@string/signup_country" />
        </android.support.design.widget.TextInputLayout>



        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:hint="@string/signup_email" />
        </android.support.design.widget.TextInputLayout>


        <!-- mobile number -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:hint="@string/signup_mobile_number" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white"
            android:layout_marginBottom="8dp">


            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/signup_password"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Re-enter Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_reEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:backgroundTint="@color/white"
                android:hint="@string/signup_re_enter_password"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="@color/colorAccent"
            android:text="@string/signupcreate_account"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="@color/white"
            android:text="@string/already_a_member_login"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>